engages yolo protocol - words removed from list once used. Adds recall via cookie. fixes logo on small screens.

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+.logo img{
+  width: 100%;
+}
 #frameworkname{
   position: relative;
   margin:20px;
